# titanic_pro

./: .coverage  .gitignore  README.md  infer.py  pyproject.toml  submission.csv  train.py
data/: split_titanic.py  test.csv  train.csv
models/: model.joblib
notebooks/: data_loading.ipynb  training_high_level_modifiers_purbani.ipynb  training_low_level_modifiers_purbani.ipynb
tests/: test_model.py  test_pipeline.py  test_utils.py
titanic_pro/: config.py  custom_transformers.py  model.py  pipeline.py  train_utils.py  utils.py
